# nd

./: .gitignore  Cargo.toml  README.md  RELEASE.md
.forgejo/workflows/: run-tests.yml  style-checks.yml
.github/workflows/: docs.yml  ndelement-release.yml  run-tests.yml  run-weekly-tests.yml  style-checks.yml
joss/: Makefile  paper.bib  paper.md
ndelement/: Cargo.toml  LICENSE  README.md  pyproject.toml
ndelement/examples/: element_family.rs  lagrange_element.rs  test_high_degree.rs
ndelement/python/ndelement/: __init__.py  ciarlet.py
ndelement/python/test/: test_element.py  test_reference_cell.py
ndelement/src/: bindings.rs  ciarlet.rs  lib.rs  map.rs  orientation.rs  reference_cell.rs  traits.rs
ndelement/src/ciarlet/: lagrange.rs
ndfunctionspace/: Cargo.toml  LICENSE  README.md
ndfunctionspace/examples/: test_mass_matrix.rs  test_parallel_space.rs
ndfunctionspace/src/: function.rs  function_space.rs  lib.rs  traits.rs
ndfunctionspace/src/function_space/: parallel.rs  serial.rs
ndgrid/: Cargo.toml  README.md
ndgrid/examples/: io.rs  parallel_io.rs  test_parallel_grid.rs  test_parallel_io.rs  test_push_forward.rs
ndgrid/src/: lib.rs  shapes.rs
ndgrid/src/geometry/: geometry_map.rs  mixed.rs  single_element.rs
ndgrid/src/grid/: local_grid.rs  parallel_builder.rs
ndgrid/src/grid/local_grid/mixed/: builder.rs  grid.rs
ndgrid/src/grid/local_grid/single_element/: builder.rs  grid.rs
ndgrid/src/io/: gmsh.rs  ron.rs
ndgrid/src/shapes/: cube.rs  regular_sphere.rs  screen.rs
ndgrid/src/topology/: mixed.rs
ndgrid/src/traits/: builder.rs  geometry_map.rs  grid.rs
ndgrid/tests/: test_gmsh_import.rs  test_mesh_parametric_ascii_v4.msh  test_mesh_parametric_binary_v4.msh  test_parametric.geo
ndmesh/: Cargo.toml  README.md
ndmesh/examples/: io.rs  mixed_mesh.rs  parallel_io.rs  parallel_mesh.rs  single_element_mesh.rs  test_parallel_mesh.rs  test_push_forward.rs
ndmesh/src/: geometry.rs  lib.rs  mesh.rs  shapes.rs  topology.rs  traits.rs
ndmesh/src/geometry/: geometry_map.rs  mixed.rs  single_element.rs
ndmesh/src/geometry/mixed/: geometry.rs
ndmesh/src/geometry/single_element/: geometry.rs
ndmesh/src/io/: gmsh.rs  ron.rs
ndmesh/src/mesh/: local_mesh.rs  parallel_builder.rs  parallel_mesh.rs
ndmesh/src/mesh/local_mesh/: mixed.rs  single_element.rs
ndmesh/src/mesh/local_mesh/mixed/: builder.rs  mesh.rs
ndmesh/src/mesh/local_mesh/single_element/: builder.rs  mesh.rs
ndmesh/src/shapes/: cube.rs  regular_sphere.rs  screen.rs
ndmesh/src/topology/: mixed.rs  single_type.rs
ndmesh/src/traits/: builder.rs  entity.rs  mesh.rs  topology.rs
ndmesh/src/traits/io/: gmsh.rs  ron.rs
ndmesh/tests/: test_gmsh_import.rs
