[workspace]
members = [
    "ndelement",
    "ndmesh",
    "ndfunctionspace",
]
resolver = "2"

[patch.crates-io]
scotch = { git = "https://github.com/mscroggs/scotch-rs.git", branch = "mscroggs/runtime", optional = true }
ndelement = { path = "ndelement" }
ndmesh = { path = "ndmesh" }
ndfunctionspace = { path = "ndfunctionspace" }
