[features]
strict = []

[package]
name = "ndfunctionspace"
version = "0.0.1-dev"
edition = "2024"
authors = [
    "Matthew Scroggs <rust@mscroggs.co.uk>",
]
description = "Finite element function spaces."
license = "BSD-3-Clause"
homepage = "https://github.com/bempp/nd"
repository = "https://github.com/bempp/nd"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "ndfunctionspace"
crate-type = ["lib", "cdylib"]

[dependencies]
ndelement = { path = "../ndelement" }
ndgrid = { path = "../ndgrid" }
itertools = "0.14.*"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = [ "--html-in-header", "../katex-header.html" ]

[lints.clippy]
wildcard_imports = "forbid"
