[features]
serde = ["dep:serde", "ndelement/serde", "dep:ron"]
strict = []
default = ["serde"]
coupe = ["dep:coupe"]
scotch = ["dep:scotch"]
mpi = ["dep:mpi", "rlst/mpi", "ndelement/mpi"]
openblas-system = ["ndelement/openblas-system"]

[package]
name = "ndmesh"
version = "0.1.5-dev"
edition = "2024"
authors = [
    "Timo Betcke <timo.betcke@gmail.com>",
    "Srinath Kailasa <srinathkailasa@gmail.com>",
    "Matthew Scroggs <rust@mscroggs.co.uk>",
]
description = "Finite element mesh library."
license = "BSD-3-Clause"
homepage = "https://codeberg.org/nd-project/nd"
repository = "https://codeberg.org/nd-project/nd"
readme = "README.md"
keywords = ["numerics"]
categories = ["mathematics", "science"]

[lib]
name = "ndmesh"
crate-type = ["lib"]

[dependencies]
coupe = { git = "https://github.com/LIHPC-Computational-Geometry/coupe.git", optional = true }
itertools = "0.14.*"
mpi = { version = "0.8.0", optional = true }
ndelement = { path = "../ndelement" }
num = "0.4"
rlst = "0.6"
serde = { version = "1", features = ["derive"], optional = true }
ron = { version = "0.12", optional = true }
scotch = { version = "0.2.1", optional = true }

[dev-dependencies]
approx = "0.5"
paste = "1.*"
rand = "0.9"
rand_chacha = "0.9"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = [ "--html-in-header", "../katex-header.html" ]

[lints.clippy]
wildcard_imports = "forbid"

[[example]]
name = "parallel_mesh"
doc-scrape-examples = true
required-features = ["serde", "scotch", "mpi"]

[package.metadata.example.parallel_mesh.templated-examples]
command = "mpirun -n {{NPROCESSES}}"

[[example]]
name = "parallel_io"
required-features = ["serde", "mpi"]

[package.metadata.example.parallel_io.templated-examples]
command = "mpirun -n 4"

[[example]]
name = "single_element_mesh"
doc-scrape-examples = true

[[example]]
name = "io"
doc-scrape-examples = true
required-features = ["serde"]

[[example]]
name = "test_parallel_mesh"
required-features = ["serde", "coupe", "scotch", "mpi"]

[package.metadata.example.test_parallel_mesh.templated-examples]
command = "mpirun -n {{NPROCESSES}}"

